--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #161b74;
 }
 
 body {
@@ -28,6 +28,16 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+body.bg-dark {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+body.bg-light {
+  background-color: #ffffff;
+  color: #000000;
 }
 
 h1 {
@@ -52,6 +62,17 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+.nav-pills .nav-link {
+  color: #ffffff;
+}
+
+
+
+.nav-pills .nav-link.active {
+  background-color: #007bff!important;
 }
 
 @media (prefers-color-scheme: light) {
